--- a/src/app/residential/Level-19/Level-19.module.css
+++ b/src/app/residential/Level-19/Level-19.module.css
@@ -333,3 +333,21 @@
     height: 8px;
   }
 }
+.imageWrapper {
+  position: relative;
+  display: inline-block;
+}
+
+.image {
+  width: 100%; /* Hoặc kích thước bạn muốn */
+  height: auto;
+}
+
+.overlaySvg {
+  position: absolute;
+  top: -3px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none; /* Để không làm gián đoạn các sự kiện của hình ảnh */
+}
