--- a/src/app/commercial/Level-2/Level-2.module.css
+++ b/src/app/commercial/Level-2/Level-2.module.css
@@ -333,3 +333,11 @@
     height: 8px;
   }
 }
+  .diamondShape {
+  width: 20px;
+  height: 20px;
+border: 1px solid #0f2e4d;
+  transform: rotate(45deg);  /* Quay hình thành hình thoi */
+  margin-right: 10px;  /* Khoảng cách giữa hình thoi và văn bản */
+  margin-left: 10px;
+}
