--- a/src/app/residential/Level-21/Level-21.module.css
+++ b/src/app/residential/Level-21/Level-21.module.css
@@ -351,3 +351,11 @@
   height: 100%;
   pointer-events: none; /* Để không làm gián đoạn các sự kiện của hình ảnh */
 }
+.diamondShape {
+  width: 20px;
+  height: 20px;
+border: 1px solid #0f2e4d;
+  transform: rotate(45deg);  /* Quay hình thành hình thoi */
+  margin-right: 10px;  /* Khoảng cách giữa hình thoi và văn bản */
+  margin-left: 10px;
+}
