--- a/src/app/residential/Level-9/Level-9.module.css
+++ b/src/app/residential/Level-9/Level-9.module.css
@@ -333,3 +333,58 @@
     height: 8px;
   }
 }
+.imageWrapper {
+  position: relative;
+  width: 100%;
+  max-width: 800px; /* Kích thước ảnh, có thể thay đổi */
+}
+
+.image {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+.svgContainer {
+opacity: .6;
+    pointer-events: none;
+    width: 45.5%;
+    height: auto;
+    position: absolute;
+    top: 27%;
+    left: 54%;
+}
+.svgContainerr {
+
+      pointer-events: none;
+      width: 65.5%;
+      height: auto;
+      position: absolute;
+      top: 5%;
+      left: 34%;
+  }
+  .svgContainer2 {
+
+    pointer-events: none;
+    width: 33%;
+    height: auto;
+    position: absolute;
+    top: 9%;
+    
+}
+.svgContainer3 {
+
+      pointer-events: none;
+      width: 30%;
+      height: auto;
+      position: absolute;
+      top: 43%;
+      left: 24%;
+  }
+  .diamondShape {
+  width: 20px;
+  height: 20px;
+border: 1px solid #0f2e4d;
+  transform: rotate(45deg);  /* Quay hình thành hình thoi */
+  margin-right: 10px;  /* Khoảng cách giữa hình thoi và văn bản */
+  margin-left: 10px;
+}
