--- a/src/app/login/LoginPage.module.css
+++ b/src/app/login/LoginPage.module.css
@@ -51,7 +51,7 @@
 .customInput {
   border: 1px solid #294b61;
   padding: 12px;
-  width: 450px;
+  width: 100%;
   color: #294b61;
   background-color: #f9f9f9;
   transition: border 0.2s ease-in-out;
