--- a/components/Buiding/detailBuling/detailBuling.module.css
+++ b/components/Buiding/detailBuling/detailBuling.module.css
@@ -62,7 +62,7 @@
   background: #8B994A;
   color: white;
    border-radius:370px 5px;
-  padding: 0.75rem 1.5rem; /* ✅ Giữ padding trái/phải để có khoảng cách chữ */
+ /* ✅ Giữ padding trái/phải để có khoảng cách chữ */
   font-weight: 500;
   border: none;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
